--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,18 @@
 extends: 'eslint:recommended'
+
 ecmaFeatures:
   modules: true
+  # Note: https://github.com/eslint/eslint/issues/4787
+  sourceType: module
+
+parserOptions:
+    sourceType: module
+
 rules:
   indent:
     - 2
     - 4
-  quotes:
-    - 2
-    - single
+  quotes: 0
   linebreak-style:
     - 2
     - unix
@@ -19,10 +24,12 @@ rules:
   no-underscore-dangle: 0
   eol-last: 0
   curly: 0
-  quotes: 0
   camelcase: 0
+
 env:
   browser: true
+  es6: true
+
 globals:
   ko: true
   koExports: true
